fixed horizontal overflow

--- a/client/css/_hangout_list.scss
+++ b/client/css/_hangout_list.scss
@@ -4,7 +4,6 @@
   overflow-y: auto;
 
   .hangout-item {
-    overflow: auto;
     p.completed { color: $kudo; text-align: center;}
     border-top: 1px solid $divider;
     padding: 20px 0;
